--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
   provider: ^6.1.4
+  sliver_tools: ^0.2.12
 
 dev_dependencies:
   flutter_test:
