--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.4
   sliver_tools: ^0.2.12
   json_annotation: ^4.9.0
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
