--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   provider: ^6.1.4
   sliver_tools: ^0.2.12
   json_annotation: ^4.9.0
-  file_picker: ^6.1.1
+  file_picker: ^10.1.9
+  http: ^1.4.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
