--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.4.0
   logger: ^2.5.0
   intl: ^0.20.2
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
