--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@ app.*.map.json
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Env
+.env
