chore: configurada inicialização do flutter para carregar variáveis de ambiente

--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,13 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
-.idea/
+.idea/*
+!.idea/runConfigurations
 devtools_options.yaml
 
 # Vscode related
-.vscode/
+.vscode/*
+!.vscode/launch.json
 
 # Flutter/Dart/Pub related
 **/doc/api/
